[project]
name = "async-task-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chenghao Mou", email = "mouchenghao@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["pydantic.mypy"]
